<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_connect"
        app:showAsAction="never"
        android:title="@string/menu_disconnect"/>
    <item
        android:id="@+id/menu_overwatch_activity"
        android:title="@string/string_overwatch"
        />
    <item
        android:id="@+id/menu_bluetooth_setup"
        android:title="@string/string_bluetooth_setup" />
    <item
        android:id="@+id/menu_btcontroller"
        android:title="@string/string_bluetooth_remote_control" />
    <item
        android:id="@+id/menu_uad_google_maps_activity"
        android:title="@string/string_uad_google_maps" />

    <group
        android:id="@+id/menu_group_connected"
        android:enabled="false"
        android:visible="false">

        <item
            android:id="@+id/menu_upload_mission"
            app:showAsAction="never"
            android:icon="@drawable/ic_cloud_upload_grey_700_24dp"
            android:title="@string/upload_mission"/>
        <item
            android:id="@+id/menu_download_mission"
            app:showAsAction="never"
            android:icon="@drawable/ic_cloud_download_grey_700_24dp"
            android:title="@string/download_mission"/>
        <item
            android:id="@+id/menu_kill_switch"
            app:showAsAction="never"
            android:enabled="false"
            android:visible="false"
            android:title="@string/menu_kill_switch"/>

    </group>

</menu>
